Fix overlapped result-bar for mobile viewport

--- a/src/style.css
+++ b/src/style.css
@@ -339,7 +339,7 @@ button {
   }
 
   #logo {
-    margin-top: -8em;
+    margin-top: -22em;
   }
 
   .result-section {
@@ -347,7 +347,7 @@ button {
     display: block;
     width: 100%;
     height: 100%;
-    margin: 0;
+    margin: 1em 0;
     animation: none;
     -webkit-animation: none;
   }
